adult/logs/create_fluctuations_15091918_675.out
SLURM_JOBID:  15092596
SLURM_ARRAY_TASK_ID:  675
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 8, 0.0005, 80)


